# TNCServer

./: .gcc-flags.json  .gitignore  CMakeLists.txt  Doxyfile  README.md  debugmacro.h  elaboraRichiesta.c  elaboraRichiesta.h  error.h  httpdata.c  httpdata.h  httpdate.c  httpdate.h  httpheaders.c  httpheaders.h  inviaMessaggio.c  inviaMessaggio.h  main.c  make_response.c  make_response.h  memzero.h  parse_request.c  parse_request.h  paths.c  paths.h  processRequest.c  processRequest.h  requester.rb  sendResponse.c  sendResponse.h  send_response.c  send_response.h  server.c  server.h  slides.html  slides.md  tests.py
doc/html/: annotated.html  classes.html  core_2error_8h.html  core_2error_8h__dep__incl.map  core_2error_8h__dep__incl.md5  core_2error_8h_source.html  debugutils_8h_source.html  dir_000006_000005.html  dir_040ce5ebbeabcab1d2cd382211e2566c.html  dir_040ce5ebbeabcab1d2cd382211e2566c_dep.map  dir_18c9a85559d5e4d82a4f046b0f6aed04.html  dir_18c9a85559d5e4d82a4f046b0f6aed04_dep.map  dir_18c9a85559d5e4d82a4f046b0f6aed04_dep.md5  dir_1ed401639f9e6289284b91202d7b43e3.html  dir_1ed401639f9e6289284b91202d7b43e3_dep.map  dir_1ed401639f9e6289284b91202d7b43e3_dep.md5  dir_392d607d9319e679afa631bae55cc816.html  dir_392d607d9319e679afa631bae55cc816_dep.map  dir_392d607d9319e679afa631bae55cc816_dep.md5  (+130 more)
libtnc/: debugutils.h  error.h  fixedthreadpool.c  fixedthreadpool.h  job.h  list.h
pages/: 400.html  404.html  501.html  default.html
tnc/: CMakeLists.txt
tnc_adt/: factory.c  factory.h  functiondefs.h  list.c  list.h  runtime_error.h  threadpool.c  threadpool.h
(+142 files in other folders)
